=== Safari-416.3 ===

2005-08-24  Adele Peterson  <adele@apple.com>

        Merged fix from TOT to Safari-2-0-branch

    2005-08-22  Geoffrey Garen  <ggaren@apple.com>

        - fixed <rdar://problem/4227011> Debugger SPI should be removed from WebView.h API

        Reviewed by mjs and adele.

        Cut and pasted debugging SPI from WebView to WebView(WebPendingPublic)

        * WebView.subproj/WebView.h:
        * WebView.subproj/WebView.m:
        (-[WebView setScriptDebugDelegate:]):
        (-[WebView scriptDebugDelegate]):
        * WebView.subproj/WebViewPrivate.h:

2005-08-24  Adele Peterson  <adele@apple.com>

        Merged fix from TOT to Safari-2-0-branch

    2005-08-23  John Sullivan  <sullivan@apple.com>

        Reviewed by Beth Dakin.
        
        - fixed <rdar://problem/4229167> 14 leaks of WebFileButton and associated objects, 
        seen after running webkit layout tests

        * WebCoreSupport.subproj/WebBridge.m:
        (-[WebBridge fileButtonWithDelegate:]):
        this method was returning a retained object; I added an autorelease

2005-08-24  Adele Peterson  <adele@apple.com>

        Fixed merge error.  Use URLToIconURL on the branch instead of pageURLToIconURL

        * Misc.subproj/WebIconDatabase.m:
        (-[WebIconDatabase _setIconURL:forURL:]):

2005-08-23  Adele Peterson  <adele@apple.com>

        Merged fix from TOT to Safari-2-0-branch

    2005-08-17  Justin Garcia  <justin.garcia@apple.com>

        Reviewed by rjw
        
        Addresses <rdar://problem/4192534> new frame load delegate SPI needed for Dashboard
            Added handledOnloadEvents delegate method (private for now)

        * WebCoreSupport.subproj/WebBridge.m:
        (-[WebBridge handledOnloadEvents]):
        * WebView.subproj/WebDefaultFrameLoadDelegate.m:
        (-[WebDefaultFrameLoadDelegate webView:didHandleOnloadEventsForFrame:]):
        * WebView.subproj/WebFrame.m:
        (-[WebFrame _handledOnloadEvents]):